[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Mob/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/music/KL Peach Game Over 1.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/music/Winds Of Stories.mp3" type="AudioStream" id=6]
[ext_resource path="res://Main/Map.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 718.901, 0.228821, 0, 0, 0, 0, 1030.84, -2.00085, 0, 0, 0, 0, 1030.84, 332.977, 0, 0, 0, 0, 1029.06, 498.684, 0, 0, 0, 0, 1029.06, 723.191, 0, 0, 0, 0, 1027.9, 1029.82, 0, 0, 0, 0, 533.222, 1029.19, 0, 0, 0, 0, -0.195282, 1029.82, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Map" parent="." instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 600 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = 0.000318293

[node name="HUD" parent="." instance=ExtResource( 4 )]
pause_mode = 2

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="mute_audio" from="HUD" to="." method="_on_HUD_mute_audio"]
[connection signal="pause_game" from="HUD" to="." method="_on_HUD_pause_game"]
[connection signal="quit_round" from="HUD" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="unmute_audio" from="HUD" to="." method="_on_HUD_unmute_audio"]
